k8s/spring.yaml
# Spring Pods for development environment
# $ kubectl create secret generic spring-secret --from-env-file=.env.spring -n dev

apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: scuad
  template:
    metadata:
      labels:
        app: scuad
    spec:
      containers:
        - name: spring-app
          image: 209192769586.dkr.ecr.ap-northeast-2.amazonaws.com/scuad-backend:develop-latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-app
  namespace: dev
spec:
  selector:
    app: scuad
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
